--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
       <div class="players-wrapper">
         <div class="player player-human">
           <div class="items-wrapper">
-            <img class="item js-item-user-rock" src="images/rock.png" alt="Rock" />
-            <img class="item js-item-user-paper picked" src="images/paper.png" alt="Paper" />
-            <img class="item js-item-user-scissors" src="images/scissors.png" alt="Scissors" />
+            <img class="item picked" src="images/rock.png" alt="Rock" />
+            <img class="item " src="images/paper.png" alt="Paper" />
+            <img class="item " src="images/scissors.png" alt="Scissors" />
           </div>
           <div class="item-picker">
-            <button class="item-btn js-btn-rock">Rock</button>
-            <button class="item-btn js-btn-paper">Paper</button>
-            <button class="item-btn js-btn-scissors">Scissors</button>
+            <button class="item-btn ">Rock</button>
+            <button class="item-btn ">Paper</button>
+            <button class="item-btn ">Scissors</button>
           </div>
         </div>
         <div class="player player-cpu">
           <div class="items-wrapper">
-            <img class="item js-item-cpu-rock" src="images/rock.png" alt="Rock" />
-            <img class="item js-item-cpu-paper" src="images/paper.png" alt="Paper" />
-            <img class="item js-item-cpu-scissors picked" src="images/scissors.png" alt="Scissors" />
+            <img class="item " src="images/rock.png" alt="Rock" />
+            <img class="item picked" src="images/paper.png" alt="Paper" />
+            <img class="item " src="images/scissors.png" alt="Scissors" />
           </div>
           <div class="item-picker mobile-hidden"></div>
         </div>
@@ -33,11 +33,11 @@
       <div class="score-wrapper">
         <span>User Won</span>
         &nbsp;
-        <span class="js-user-score">0</span>
+        <span class="">0</span>
         &nbsp;
         <span>out of</span>
         &nbsp;
-        <span class="js-total-moves">0</span>
+        <span class="">0</span>
         &nbsp;
         <span>games</span>
       </div>
