made mobile responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img class="item js-item-cpu-paper" src="images/paper.png" alt="Paper" />
             <img class="item js-item-cpu-scissors picked" src="images/scissors.png" alt="Scissors" />
           </div>
-          <div class="item-picker hidden"></div>
+          <div class="item-picker mobile-hidden"></div>
         </div>
       </div>
       <div class="score-wrapper">
